# texword

./: LICENSE  README.md  pyproject.toml
tests/: test_latex_route.py  test_postprocessor.py
texword/: __init__.py  __main__.py  cli.py
texword/core/: converter.py  style.py
texword/latex/: pandoc_bridge.py  postprocessor.py  preprocessor.py
texword/markdown/: __init__.py  converter.py
texword/markdown/styles/: academic.css
texword/pdf/: assembler.py  extractor.py  ocr_engine.py
texword/pdf/engines/: api_generic.py  deepseek_ocr.py
