[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texword"
version = "0.2.0"
description = "Academic document converter: LaTeX/Markdown/PDF → Word/PDF"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Yang Zhengyuan"},
]
keywords = ["latex", "word", "docx", "pdf", "markdown", "academic", "converter", "pandoc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "python-docx>=0.8.11",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
texword = "texword.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["texword*"]

[tool.setuptools.package-data]
"texword.markdown.styles" = ["*.css"]
